implemented StorageInterface
